<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>fi.otavanopisto.muikku</groupId>
  <artifactId>parent</artifactId>
  <version>1.1.270-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Muikku Parent</name>

  <organization>
    <name>Otavan Opisto</name>
    <url>http://www.otavanopisto.fi/</url>
  </organization>

  <scm>
    <developerConnection>scm:git:git@github.com:otavanopisto/muikku.git</developerConnection>
    <url>git@github.com:otavanopisto/muikku.git</url>
    <connection>scm:git:git@github.com:otavanopisto/muikku.git</connection>
    <tag>HEAD</tag>
  </scm>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/otavanopisto/muikku/issues</url>
  </issueManagement>

  <licenses>
    <license>
      <name>GNU General Public License, Version 3</name>
      <url>http://www.gnu.org/copyleft/gpl.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>otavanopisto</id>
      <email>ratkaisutiimi@otavanopisto.fi</email>
      <name>Otavan Opisto</name>
      <organization>Otavan Opisto</organization>
      <organizationUrl>http://www.otavanopisto.fi/</organizationUrl>
      <roles>
        <role>Owner</role>
      </roles>
    </developer>
  </developers>

  <modules>
    <module>muikku-bom</module>
    <module>muikku-core</module>
    <module>muikku-debug</module>
    <module>muikku-core-plugins</module>
    <module>muikku-elastic-search</module>
    <module>muikku-core-plugins-persistence</module>
    <module>muikku-forum-plugin-rest-model</module>
    <module>muikku-hsqldb-plugin</module>
    <module>muikku-google-oauth</module>
    <module>muikku-pyramus-oauth</module>
    <!-- 		<module>muikku-h2db-plugin</module> -->
    <module>muikku-persistence</module>
    <module>muikku-plugin</module>
    <module>muikku-rest</module>
    <module>muikku-school-data-pyramus</module>
    <module>muikku-school-data-pyramus-persistence</module>
    <module>muikku-dummy-mail-bridge-plugin</module>
    <module>muikku-jndi-mail-bridge-plugin</module>
    <module>muikku-timed-notifications-plugin</module>
    <module>muikku</module>
    <module>muikku-developer-tools</module>
    <module>muikku-atests</module>
    <module>muikku-atests-plugin</module>
    <module>muikku-atests-plugin-rest-model</module>
    <module>muikku-frontend</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <hibernate-jpamodelgen.version>5.3.20.Final</hibernate-jpamodelgen.version>
    <findbugs.skip>true</findbugs.skip>
    <elasticsearch.version>7.17.5</elasticsearch.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>fi.otavanopisto.muikku</groupId>
        <artifactId>bom</artifactId>
        <version>1.1.270-SNAPSHOT</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.jasig.maven</groupId>
          <artifactId>sass-maven-plugin</artifactId>
          <version>1.1.1</version>
        </plugin>

        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>

        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.1.1</version>
          <configuration>
            <mavenExecutorId>forked-path</mavenExecutorId>
            <releaseProfiles>jndi-mail-plugin,elastic-search-plugin,timed-notifications-plugin,pyramus-plugins</releaseProfiles>
            <tagNameFormat>@{project.version}</tagNameFormat>
            <autoVersionSubmodules>true</autoVersionSubmodules>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>
                      org.codehaus.mojo
                    </groupId>
                    <artifactId>
                      findbugs-maven-plugin
                    </artifactId>
                    <versionRange>
                      [2.5,)
                    </versionRange>
                    <goals>
                      <goal>check</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!--
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.5.2</version>
				<configuration>
					<effort>Max</effort>
					<failOnError>false</failOnError>
					<threshold>High</threshold>
					<xmlOutput>true</xmlOutput>
      <findbugsXmlOutputDirectory>${project.build.directory}/findbugs</findbugsXmlOutputDirectory>
					<skip>${findbugs.skip}</skip>
				</configuration>
				<executions>
					<execution>
						<id>analyze-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			-->
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jboss-public-repository</id>
      <name>JBoss Repository</name>
      <url>https://repository.jboss.org/nexus/content/groups/public</url>
      <releases>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>

    <repository>
      <id>otavanopisto-snapshots</id>
      <name>Otavan Opisto Snapshots</name>
      <url>https://nexus.muikkuverkko.fi/repository/otavanopisto-snapshots/</url>
    </repository>

    <repository>
      <id>otavanopisto-releases</id>
      <name>Otavan Opisto Releases</name>
      <url>https://nexus.muikkuverkko.fi/repository/otavanopisto-releases/</url>
    </repository>

  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>jboss-public-repository</id>
      <name>JBoss Repository</name>
      <url>https://repository.jboss.org/nexus/content/groups/public</url>
      <releases>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </pluginRepository>

    <pluginRepository>
      <id>otavanopisto-snapshots</id>
      <name>Otavan Opisto Snapshots</name>
      <url>https://nexus.muikkuverkko.fi/repository/otavanopisto-snapshots/</url>
    </pluginRepository>

    <pluginRepository>
      <id>otavanopisto-releases</id>
      <name>Otavan Opisto Releases</name>
      <url>https://nexus.muikkuverkko.fi/repository/otavanopisto-releases/</url>
    </pluginRepository>

  </pluginRepositories>

  <distributionManagement>
    <snapshotRepository>
      <uniqueVersion>false</uniqueVersion>
      <id>otavanopisto-snapshots</id>
      <name>Otavan Opisto Snapshots</name>
      <url>https://nexus.muikkuverkko.fi/repository/otavanopisto-snapshots/</url>
    </snapshotRepository>
    <repository>
      <uniqueVersion>true</uniqueVersion>
      <id>otavanopisto-releases</id>
      <name>Otavan Opisto Releases</name>
      <url>https://nexus.muikkuverkko.fi/repository/otavanopisto-releases/</url>
    </repository>
  </distributionManagement>
</project>
